--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
     <groupId>ru.itis</groupId>
     <artifactId>chapayev-game</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+    <modules>
+        <module>server</module>
+        <module>networking</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <kotlin.version>1.3.41</kotlin.version>
@@ -30,6 +34,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>ru.itis</groupId>
+            <artifactId>networking</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>ru.itis</groupId>-->
+        <!--            <artifactId>chapayev-server</artifactId>-->
+        <!--            <version>1.0</version>-->
+        <!--        </dependency>-->
+        <dependency>
             <groupId>no.tornado</groupId>
             <artifactId>tornadofx</artifactId>
             <version>${tornadofx.version}</version>
@@ -48,6 +62,10 @@
     </dependencies>
 
     <build>
+        <!--        <resources>-->
+        <!--            <resource><directory>assets</directory></resource>-->
+        <!--            <resource><directory>src/main/resources</directory></resource>-->
+        <!--        </resources>-->
         <sourceDirectory>src/main/kotlin</sourceDirectory>
         <plugins>
             <plugin>
